--- a/content/1.posts/1.articles/3.yellow.md
+++ b/content/1.posts/1.articles/3.yellow.md
@@ -1,9 +1,9 @@
 ---
-title: 'mk示例'
+title: 'yellow实例'
 navigation:
-  title: '怎么使用一个有意思的函数'
+  title: 'yellow实例'
   icon: '🏡'
-  date: 2021/10/10
+  date: 2023/03/20
 description: 'What a lovely page.'
 image:
   src: '/assets/images/image.png'
