update: style prose-pre

--- a/content/1.posts/1.articles/4.blue.md
+++ b/content/1.posts/1.articles/4.blue.md
@@ -26,15 +26,21 @@ meta:
 ---
 # Markdown 示例文件
 ## 什么是 Markdown？
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
-Markdown 是一种标记语言，它可以让你使用简单的标记符号来描述文本的排版样式。Markdown 可以帮助你快速地将文转换成网页或其他格式的文档。Markdown 的标记符号非常简单，容易记忆，因此成为了众多写作爱好者和程序员的选择。
+```typescript
+const head = useHead({
+    title: 'Posts'
+})
+interface NavItem {
+    _path: string
+    navigation: navigation
+}
+interface navigation {
+    title: string
+    date: string
+    [key: string]: any
+}
+const router = useRouter()
+```
 ## 常用的 Markdown 标记符号
 下面是一些常用的 Markdown 标记符号：
 - 标题：使用 # 符号来表示不同级别的标题，例如：# 表示一级标题，## 表示二级标题，以此类推。
