--- a/content/1.posts/1.articles/1.hello.md
+++ b/content/1.posts/1.articles/1.hello.md
@@ -13,16 +13,13 @@ image:
 head:
   meta:
     - name: 'keywords'
-      content: 'nuxt, vue, content'
+      content: ''
     - name: 'robots'
-      content: 'index, follow'
+      content: 'content, follow'
     - name: 'author'
-      content: 'NuxtLabs'
+      content: '午羊'
     - name: 'copyright'
-      content: '© 2022 NuxtLabs'
-meta: 
-    - key: 'title'
-    - value: 'qwe' 
+      content: ''
 ---
 # Markdown 示例文件
 ## 什么是 Markdown？
