create: img component

--- a/content/1.posts/1000.blog-construct.md
+++ b/content/1.posts/1000.blog-construct.md
@@ -60,3 +60,6 @@ VII. 其他的工具和功能
 VIII. 总结
 - 总结本教程要点
 - 阐述下一步行动，如何扩展和改进博客网站
+
+
+:content-cimg{imgUrl="http://cloud.kyoapps.com/images/Zombatar_1.jpg"}
