update content: web font interview

--- a/content/1.posts/5.Learn-React.md
+++ b/content/1.posts/5.Learn-React.md
@@ -26,17 +26,20 @@ tag: ['React']
 
 初级：
 1. 学习React基础概念，例如组件，状态和属性等。
-2. 学习如何使用React创建组件并渲染到页面上。
-3. 学习如何使用JSX语法创建React元素。
-4. 学习如何使用React生命周期方法来管理组件的状态和行为。
-5. 学习如何使用React事件处理程序来响应用户操作。
+2. React创建组件并渲染到页面上。
+3. JSX语法创建React元素。
+4. React生命周期方法来管理组件的状态和行为。
+5. React事件处理程序来响应用户操作。
+
 中级：
-1. 学习如何使用React Router来管理应用程序的路由。
-2. 学习如何使用React Redux来管理应用程序的状态。
-3. 学习如何使用React Hooks来管理组件的状态和行为。
-4. 学习如何使用React Context来管理应用程序的全局状态。
+1. React Router来管理应用程序的路由。
+2. React Redux来管理应用程序的状态。
+3. React Hooks来管理组件的状态和行为。
+4. React Context来管理应用程序的全局状态。
+
 高级：
-1. 学习如何使用React性能优化技术，例如PureComponent和shouldComponentUpdate等。
-2. 学习如何使用React测试工具，例如Jest和Enzyme等。
-3. 学习如何使用React服务器端渲染（SSR）来提高应用程序性能和SEO。
-4. 学习如何使用React Native来构建跨平台移动应用程序。
+1. React性能优化技术，例如PureComponent和shouldComponentUpdate等。
+2. React测试工具，例如 `Jest` 和 `Enzyme` 等。
+   [Jest](https://www.jestjs.cn/) / [Enzyme](https://www.jestjs.cn/)
+3. React服务器端渲染（SSR）来提高应用程序性能和SEO。
+4. React Native来构建跨平台移动应用程序。
