update content: web font interview

--- a/content/1.posts/6.Front-Web-Interview.md
+++ b/content/1.posts/6.Front-Web-Interview.md
@@ -9,7 +9,7 @@ image:
   src: ""
   alt: ""
   width: 400
-  height: 300
+  height: 300   
 head:
   meta:
     - name: "keywords"
@@ -26,4 +26,5 @@ tag: ['Nodejs', 'HTML', 'CSS', 'JS', '数据库']
 
 ## 八股文总结
 
-[HTML & CSS 总结](/posts/front-web-interview-html-css)
+1. [HTML & CSS 总结](/posts/front-web-interview-html-css)
+2. [Javascript 总结](/posts/front-web-interview-js)
