update content: web font interview promise

--- a/content/1.posts/8.Front-Web-Interview-JS.md
+++ b/content/1.posts/8.Front-Web-Interview-JS.md
@@ -9,7 +9,7 @@ image:
   src: ""
   alt: ""
   width: 400
-  height: 300   
+  height: 300
 head:
   meta:
     - name: "keywords"
@@ -21,7 +21,7 @@ head:
     - name: "copyright"
       content: "MIT"
 category: "面试"
-tag: ['Javascript','面试']
+tag: ["Javascript", "面试"]
 ---
 
 # JS 小抄
@@ -38,48 +38,48 @@ tag: ['Javascript','面试']
 ### 知识点
 
 - 变量类型
-   1. 值类型 vs 引用类型
-   ![值类型](http://cloud.kyoapps.com/images/msedge_BXH8XGjkQL.png)
-   ![引用类型](http://cloud.kyoapps.com/images/msedge_oKxGhXM5Wu.png)
+  1.  值类型 vs 引用类型
+      ![值类型](https://cloud.kyoapps.com/images/msedge_BXH8XGjkQL.png)
+      ![引用类型](https://cloud.kyoapps.com/images/msedge_oKxGhXM5Wu.png)
       - 常见引用类型
-         - `Object` \ `arr` \ `null` \ `function`
-         - `null` 特殊引用，指向空地址
-         - `function` 特殊引用，不存储数据，不存在拷贝、复制函数
-   2. typeof 运算符
+        - `Object` \ `arr` \ `null` \ `function`
+        - `null` 特殊引用，指向空地址
+        - `function` 特殊引用，不存储数据，不存在拷贝、复制函数
+  2.  typeof 运算符
       - 识别所有值类型
       - 识别函数
       - 判断是否是引用类型（**不可再细分**），[原型链再深入]()
-   3. 深拷贝 [多种方式实现深拷贝，以及各方式间的对比](/posts/front-web-deep-clone)
+  3.  深拷贝 [多种方式实现深拷贝，以及各方式间的对比](/posts/front-web-deep-clone)
 - 变量计算
-   - 类型转换
-      1. 字符串拼接
-      2. ==
-      ```js
-        100 == '100'      //true
-        0 == ''           //true
-        0 == false        //true
-        false == ''       //true
-        null == undefined //true
-        // == 会变更 == 两端的变量类型
-        // 除了 == null 之外，其他一律使用 === 来进行判断
-        if(v == null){}
-        //相当于
-        if(v === null || v === undefined)
-      ```
-      3. if语句的逻辑运算
-         - `truly` 变量： `!!a === true ` 的变量
-         - `falsely` 变量： `!!a === false ` 的变量
-         ```js
-            //以下是 falsely 变量。
-            //除此之外都是 truly 变量
-            !!0 === false
-            !!NaN === false
-            !!'' === false
-            !!null === false
-            !!undefined === false
-            !!false === false
-         ```
-         - 逻辑判断
+  - 类型转换
+    1. 字符串拼接
+    2. ==
+    ```js
+      100 == '100'      //true
+      0 == ''           //true
+      0 == false        //true
+      false == ''       //true
+      null == undefined //true
+      // == 会变更 == 两端的变量类型
+      // 除了 == null 之外，其他一律使用 === 来进行判断
+      if(v == null){}
+      //相当于
+      if(v === null || v === undefined)
+    ```
+    3. if 语句的逻辑运算
+       - `truly` 变量： `!!a === true ` 的变量
+       - `falsely` 变量： `!!a === false ` 的变量
+       ```js
+       //以下是 falsely 变量。
+       //除此之外都是 truly 变量
+       !!0 === false;
+       !!NaN === false;
+       !!"" === false;
+       !!null === false;
+       !!undefined === false;
+       !!false === false;
+       ```
+       - 逻辑判断
 
 ## 原型和原型链
 
@@ -96,7 +96,7 @@ tag: ['Javascript','面试']
 ### 原型
 
 `instance.__proto__` ==== `Class.prototype`
-![原型](http://cloud.kyoapps.com/images/msedge_YtcS4bEcj0.png)
+![原型](https://cloud.kyoapps.com/images/msedge_YtcS4bEcj0.png)
 
 - 每个 `class` 都有显示原型 `prototype`
 - 每个实例都有隐式原型 `__proto__`
@@ -105,24 +105,186 @@ tag: ['Javascript','面试']
 ### 基于原型的执行规则
 
 - 获取属性或执行方法时
-   1. 现在自身属性和方法寻找
-   2. 如果找不到，去 `__proto__` 中查找
+  1.  现在自身属性和方法寻找
+  2.  如果找不到，去 `__proto__` 中查找
 
 ### 原型链
+
 - class 在 es6 中是语法规范，没有规定如何实现
-- 以下为V8引擎的实现方式
-![原型链](http://cloud.kyoapps.com/images/msedge_cWUFMuoKTV.png)
+- 以下为 V8 引擎的实现方式
+  ![原型链](https://cloud.kyoapps.com/images/msedge_cWUFMuoKTV.png)
 
 `instanceof` 原理：顺着原型链一步步找，在原型链上返回 `true`
 
 ### 解题
 
 1. 如何准确判断一个变量是不是数组？
+
    - `intanceof`
 
-2. 手写简易jQuery，考虑插件和扩展性
+2. 手写简易 jQuery，考虑插件和扩展性
+
    - [jQuery code](/posts/front-web-jquery)
 
 3. class 原型额本质，怎么理解
    - 原型和原型链图示
    - 属性和方法的执行规则
+
+## 作用域和闭包
+
+### 作用域
+
+![作用域](https://cloud.kyoapps.com/images/20230606201556.png)
+
+- 全局作用域
+- 函数作用域
+- 块级作用域
+
+#### 自由变量
+
+- 一个变量在当前作用域没有定义，但被使用了
+- 向上作用域，一层层一次寻找，直到找到为止
+- 如果到全局作用域都没有找到，则报错 `xx is not defined`
+
+### 闭包
+
+- 作用域应用的特殊情况：
+  1.  函数作为参数传递
+  2.  函数作为返回值被返回
+- [参考代码](/posts/algs#_2620-计数器)
+
+```js
+// 例子1
+function create() {
+  const a = 100;
+  return function () {
+    console.log(a);
+  };
+}
+
+const fn1 = create();
+const a = 200;
+fn1(); // a = 100
+
+// 例子2
+function print(fn) {
+  const b = 200;
+  fn(); // b = 100
+}
+
+const b = 100;
+
+function fn2() {
+  console.log(b);
+}
+```
+
+- **闭包：自由变量的查找，是在函数定义的地方，向上级作用域查找**
+- **不是在执行的地方**
+
+## this
+
+> `this` 在函数调用时才能够确认
+
+1. 作为普通函数 => `window`
+2. 使用 `call` `apply` `bind` => 绑定的对象
+   - `fn.call(obj, ...args)` 直接调用函数
+   - `const fn2 = fn.bind(obj)` 返回一个新的函数，使用新的函数执行
+   - `fn.apply(obj, arr)`
+3. 作为对象方法被调用
+   - 方法中调用 `setTimeout(function(){ this })` => 普通函数调用，此时是 window
+   - 方法中调用 `setTimeout(() => { this })` => 箭头函数调用，取箭头函数上级作用域的 this，此时是对象本身
+4. 在 `class` 方法中调用 => 实例本身
+5. 箭头函数 => 箭头函数调用，取箭头函数上级作用域的 this
+6. 补充，对象原型中的 this，调用`obj.__proto__.fn()` => `undefined`
+
+## 实际开发中闭包的应用
+
+- 隐藏数据，数据私有化
+
+- 简单的 `cache` 工具
+
+  ```js
+     function createCache(){
+        const data = {}
+        return {
+           set: function (key, val) {
+              data[key] = val
+           },
+           get: function (key) {
+              return data[key]
+           }
+        }
+     }
+     const c = createCache()
+     c.set...
+     c.get...
+     //闭包中的data，外界无法访问，只能通过return出来的api访问
+  ```
+
+## 同步和异步
+
+### 单线程和异步
+
+- `js` 是单线程语言，只能同时做一件事
+- 浏览器和 `nodejs` 支持 js 启动进程，如 `Web Worker`
+- `js` 和 `dom` 渲染公用同一个线程，`js` 可以修改`dom` 结构
+
+- 异步，解决网络请求、定时任务等的等待问题
+- 基于 `callback` 函数形式
+
+### 异步的应用场景
+
+- 网络请求， `ajax` / 图片加载
+  ```js
+     console.log('start')
+     let img = document.createElement('img')
+     img.onload = function (){
+        ...//加载完成后才会触发该函数
+     }
+     img.src - '/xxx.png'
+     console.log('end')
+  ```
+- 定时任务，setTimeout
+
+### promise
+
+- 解决回调地狱的问题
+
+- 基于 `promise` 的图片加载
+  ```js
+   function loadImg(src) {
+      return new Promise((resolve, reject) => {
+         const img = document.createElement("img");
+         img.onload = () => {
+         resolve(img);
+         };
+         img.onerror = () => {
+         reject(new Error(`图片加载失败 ${src}`));
+         };
+         img.src = src;
+      });
+   }
+   const url = "https://cloud.kyoapps.com/images/20230606201556.png";
+   const url2 = "https://cloud.kyoapps.com/images/msedge_YtcS4bEcj0.png";
+   const body = document.getElementsByTagName("body")[0];
+
+   const img = loadImg(url)
+   .then((img) => {
+      console.log(img);
+      body.append(img);
+      return loadImg(url2);
+   })
+   .then((img2) => {
+   //接受的是上一个 then 的返回值，可以是普通值也可以是 Promise 对象
+      console.log(img2);
+      body.append(img2);
+      return img2
+   })
+   .then(img2 =>{
+      console.log(img2.width)
+   })
+   .catch((err) => {
+      console.error(err);
+   });
+   ```
