update content: web font interview DOM

--- a/content/1.posts/8.Front-Web-Interview-JS.md
+++ b/content/1.posts/8.Front-Web-Interview-JS.md
@@ -54,7 +54,7 @@ tag: ["Javascript", "面试"]
   - 类型转换
     1. 字符串拼接
     2. ==
-    ```js
+    ```javascript
       100 == '100'      //true
       0 == ''           //true
       0 == false        //true
@@ -69,7 +69,7 @@ tag: ["Javascript", "面试"]
     3. if 语句的逻辑运算
        - `truly` 变量： `!!a === true ` 的变量
        - `falsely` 变量： `!!a === false ` 的变量
-       ```js
+       ```javascript
        //以下是 falsely 变量。
        //除此之外都是 truly 变量
        !!0 === false;
@@ -153,7 +153,7 @@ tag: ["Javascript", "面试"]
   2.  函数作为返回值被返回
 - [参考代码](/posts/algs#_2620-计数器)
 
-```js
+```javascript
 // 例子1
 function create() {
   const a = 100;
@@ -204,7 +204,7 @@ function fn2() {
 
 - 简单的 `cache` 工具
 
-  ```js
+  ```javascript
      function createCache(){
         const data = {}
         return {
@@ -236,7 +236,7 @@ function fn2() {
 ### 异步的应用场景
 
 - 网络请求， `ajax` / 图片加载
-  ```js
+  ```javascript
      console.log('start')
      let img = document.createElement('img')
      img.onload = function (){
@@ -252,7 +252,7 @@ function fn2() {
 - 解决回调地狱的问题
 
 - 基于 `promise` 的图片加载
-  ```js
+  ```javascript
    function loadImg(src) {
       return new Promise((resolve, reject) => {
          const img = document.createElement("img");
@@ -288,3 +288,92 @@ function fn2() {
       console.error(err);
    });
    ```
+
+## JS WEB API
+
+### DOM
+
+- `vue` / `react` 对 `dom` 操作进行了封装，使用框架的前提下，不会用到原生的 `dom` 操作
+- `DOM API` 作为基础知识应该被掌握
+- `DOM` 的本质是一颗树，是特定的 `xml` 结构 `Html` 解析出来的
+
+#### 获取 `DOM` 节点
+- 集合
+   1. `sByTagName` - `HTMLCollection` 对象
+   2. `sByClassName` - `HTMLCollection` 对象
+   3. `querySelectorAll` - `NodeList` 对象
+- 元素
+   1. `ById` - 元素对象
+   2. `querySelector` - 元素对象
+
+`HTMLCollection` 对象和 `NodeList` 对象区别： 
+ 
+   1. 返回方式不同： `getElementsBy` 系列方法返回的是 `HTMLCollection` 对象，而  `querySelectorAll` 方法返回的是 `NodeList` 对象。 
+   2. 实时性不同： `HTMLCollection` 对象是实时的，即当文档中的元素发生变化时，`HTMLCollection` 对象也会自动更新。而 `NodeList` 对象是静态的，即当文档中的元素发生变化时，`NodeList` 对象不会自动更新。 
+   3. 方法不同：`HTMLCollection` 对象具有 `namedItem()` 方法，可以根据元素的 `name` 属性获取元素，而 `NodeList` 对象没有该方法。`NodeList` 对象具有`forEach()` 方法，可以方便地遍历其中的元素，而` HTMLCollection` 对象没有该方法。 
+   4. 元素访问方式不同：`HTMLCollection` 对象可以通过索引或者`item()` 方法访问其中的元素，而`NodeList`对象只能通过索引访问其中的元素。 
+
+`HTMLCollection` 对象和`NodeList` 对象都是用于存储一组元素的对象，区别主要在于返回方式、实时性、方法和元素访问方式等方面。
+
+#### `DOM` 节点的 `property` 形式
+
+- 对 `dom` 元素对象的 `style` `className` `nodeName` `nodeType` 等属性进行操作
+
+#### `DOM` 节点的 `attribute`
+
+- `node.getAttribute`
+- `node.setAttribute`
+
+**property 和 attribute 改变，都有可能引起DOM重新渲染**
+
+#### `DOM` 结构操作
+
+- 新增 / 插入 节点
+   - `createElement('') / appendChild(nodeObj)`
+- 移动节点
+   - 获取已有节点 -> 要插入的节点对象.appendChild(获取到的节点)
+- 获取父元素
+   - node.parentNode
+- 获取子元素列表
+   - parentNode.childNodes -> 返回全部节点 -> 需要过滤出node节点
+   ```javascript
+   //先转化成数组，再使用filter方法过滤出nodeType为1的节点
+   const needChildNodes = Array.prototype.slice.call(parentNode.childNodes).filter( 
+      child => child.nodeType === 1 ? true : false
+   )
+   ```
+- 删除节点
+   - `removeChild(节点)`
+
+#### `DOM` 性能优化
+
+1. DOM 操作非常 **昂贵**，避免频繁操作
+2. 对 DOM 查询做缓存
+3. 将频繁操作改为一次性操作 `createDocumentFragment()` 文档片段
+   ```javascript
+      const listNode = document.getElementById('list')
+
+      const frag = document.createDocumentFragment()
+
+      for(let x = 0; x < 10; x++){
+         const li = document.createElement('li')
+         li.innerHTML = 'List item ' + x
+         frag.appendChild(li)
+      }
+      //完成后，再插入到 DOM 树中
+      listNode.appendChild(frag)
+   ```
+#### `DOM` 问题汇总
+
+1. `DOM` 是哪种数据结构 - `tree`
+2. `DOM` 常用 `API` - 节点 / 结构 / `attribute` / `property`
+3. `attribute` / `property` 区别 - `html` 属性 / 结构 ，都会可能引起 `DOM` 重新渲染
+4. `DOM` 性能 - `createDocumentFragment()`
+
+### BOM
+
+### EVENT
+
+### AJAX
+
+### Storage
