update content: web font interview

--- a/content/1.posts/8.Front-Web-Interview-JS.md
+++ b/content/1.posts/8.Front-Web-Interview-JS.md
@@ -4,7 +4,7 @@ navigation:
   title: "JS小抄"
   icon: ""
   date: 2023/06/06
-description: "."
+description: "JS面试总结"
 image:
   src: ""
   alt: ""
@@ -80,6 +80,7 @@ tag: ["Javascript", "面试"]
        !!false === false;
        ```
        - 逻辑判断
+--- 
 
 ## 原型和原型链
 
@@ -129,6 +130,7 @@ tag: ["Javascript", "面试"]
 3. class 原型额本质，怎么理解
    - 原型和原型链图示
    - 属性和方法的执行规则
+--- 
 
 ## 作用域和闭包
 
@@ -181,6 +183,7 @@ function fn2() {
 
 - **闭包：自由变量的查找，是在函数定义的地方，向上级作用域查找**
 - **不是在执行的地方**
+--- 
 
 ## this
 
@@ -197,6 +200,7 @@ function fn2() {
 4. 在 `class` 方法中调用 => 实例本身
 5. 箭头函数 => 箭头函数调用，取箭头函数上级作用域的 this
 6. 补充，对象原型中的 this，调用`obj.__proto__.fn()` => `undefined`
+--- 
 
 ## 实际开发中闭包的应用
 
@@ -221,6 +225,7 @@ function fn2() {
      c.get...
      //闭包中的data，外界无法访问，只能通过return出来的api访问
   ```
+--- 
 
 ## 同步和异步
 
@@ -288,8 +293,35 @@ function fn2() {
       console.error(err);
    });
    ```
+   ```javascript
+      //一个简单的延迟函数
+      function delay(delay) {
+      return new Promise((resolve)=>{
+         setTimeout(() =>{
+            resolve()
+         }, delay)
+      })
+      }
 
-## JS WEB API
+      async function fn(){
+      const arr = [1,2,3,4,5]
+      await delay(1000)
+      console.log(arr[0]);
+      await delay(500)
+      console.log(arr[1]);
+      await delay(1000)
+      console.log(arr[2]);
+      await delay(100)
+      console.log(arr[3]);
+      await delay(5000)
+      console.log(arr[4]);
+      }
+
+      fn()
+   ```
+--- 
+
+# # JS WEB API
 
 ### DOM
 
@@ -372,8 +404,291 @@ function fn2() {
 
 ### BOM
 
+- 要点
+   1. **navigator**
+   2. screen
+   3. **location**
+   4. history
+
+- 识别浏览器类型
+   ```javascript
+      const ua = navigator.userAgent
+      if (ua.indexOf("Chrome") != -1) {
+         // Chrome浏览器
+      } else if (ua.indexOf("Firefox") != -1) {
+         // Firefox浏览器
+      } else if (ua.indexOf("Safari") != -1) {
+         // Safari浏览器
+      } else if (ua.indexOf("Edge") != -1) {
+         // Edge浏览器
+      } else if (ua.indexOf("MSIE") != -1 || !!document.documentMode == true) {
+         // IE浏览器
+      } else {
+      // 其他浏览器
+      }
+   ```
+   - **User Agent字符串经常被伪造，因此无法保证其准确性。**
+
+- 分析拆解 `Url` 各部分
+   1. location.href - 全部网址
+   2. location.protocol - 通信协议
+   3. location.pathname - path
+   4. location.search - ?
+   5. location.hash - #
+
+- `history` 
+   - `history.back()`
+   - `history.forward()`
+
 ### EVENT
+
+#### 通用事件绑定函数
+   ```javascript
+      function bindEvent(elem, type, fn){
+         elem.addEventListener(type, fn)
+      }
+
+      const a = document.getElementById('elem1')
+
+      bindEvent(a, 'click', e => {
+         e.preventDefault()
+         console.log(e);
+      })
+   ```
+
+#### 事件冒泡
+- 容器添加事件监听，内部元素也会触发监听的事件
+   - 通过 `e.target` 可以查看触发元素
+   - 通过 `e.stopPropagation()` 取消冒泡
+   - 冒泡的顺序，从内往外
+
+#### 事件代理
+
+- 为父容器绑定事件监听，通过判断 `e.target` 的类型，来实现对应的元素监听
+- 代码简洁
+- 减少内存
+- 不适合结构复杂的html结构
+```javascript
+   function bindEvent(option = { el, type, selector, fn, useCapture: true }) {
+   const { el, type, selector, fn, useCapture } = option;
+   el.addEventListener(
+      type,
+      (e) => {
+         const target = e.target;
+         if (selector) {
+         //代理绑定
+         if (target.matches(selector)) {
+            fn.call(target, e);
+         }
+         } else {
+         //普通绑定
+         fn.call(target, e);
+         }
+      },
+      useCapture
+   );
+   }
+
+   const a = document.getElementById("box");
+
+   const option = {
+   el: a,
+   type: "click",
+   selector: 'a',
+   fn: function (e) { // 如果使用箭头函数，this为什么指向window
+      e.preventDefault();
+      console.log(this);
+   },
+   };
+
+   bindEvent(option);
+```
+#### 描述事件冒泡的流程
+
+- 基于 DOM 树结构
+- 事件会顺着触发元素往上冒泡
+- 应用：事件代理
+
+#### 无限下来图片列表，如何监听每个图片的点击
+
+- 事件代理
+- 用 `e.target` 获取触发元素
+- 用 `matches` 来判断是否是触发元素
 
 ### AJAX
 
+- `XMLHttpRequest`
+   ```javascript
+   function ajax(url, method, data) {
+      return new Promise(function(resolve, reject) {
+         var xhr = new XMLHttpRequest();
+         xhr.open(method, url, true);
+         xhr.setRequestHeader('Content-Type', 'application/json;charset=utf-8');
+         xhr.onreadystatechange = function() {
+            if (xhr.readyState === 4) {
+            if (xhr.status === 200) {
+               resolve(JSON.parse(xhr.responseText));
+            } else {
+               reject(new Error(xhr.statusText));
+            }
+            }
+         };
+         xhr.onerror = function() {
+            reject(new Error('Network Error'));
+         };
+         xhr.send(JSON.stringify(data));
+      });
+   }
+   ajax('/api/data', 'POST', { name: 'John', age: 30 })
+   .then(function(response) {
+      console.log(response);
+   })
+   .catch(function(error) {
+      console.error(error);
+   });
+  ```
+- 状态码
+   - xhr.readyState
+      1. 0 - UNSET 尚未调用 open 方法
+      2. 1 - OPENED open已被调用
+      3. 2 - HEADERS_RECEIVED send 方法已被调用， header 已被接收
+      4. 3 - LOADING 下载中， responseText 已有部分内容
+      5. 4 - DONE 下载完成
+   - xhr.status
+      1. 2xx - success
+      2. 3xx - 重定向，301 - 永久重定向， 302 - 临时重定向， 304 - 资源缓存，有新内容更新重定向
+      3. 4xx - 客户端请求错误， 404 - 请求地址错误， 403 - 访问地址无服务
+      4. 5xx - 服务端错误  
+
+#### 跨域：同源策略，跨域解决方案
+
+   1. ajax请求时， **浏览器** 要求当前网页和server必须同源（安全）
+   2. 同源：协议、域名、端口，三者必须一致
+   3. 加载 图片、 css、 js 可无视同源策略
+      - img src - 可用于统计打点，使用第三方统计服务
+      - link href - 使用CDN
+      - script src - 使用CDN
+      - script - 实现JSONP
+   4. 跨域
+      - 所有跨域，都必须经过 server 端允许和配合
+      - 未经 server 端允许就实现跨域，说明浏览器有漏洞，危险
+
+##### JSONP  
+
+- `<script>` 可绕过跨域限制
+- **服务器**可以**任意动态拼接数据**返回
+- `<script>` 可以获得跨域的数据，只要 **服务端愿意返回**
+- 过程
+   1. 通过`<script src="http://..../jsonp.js?username=xxx&callback=fn"`发送请求
+   2. 通过 `window.callback = function (data){ data }` 获取返回的数据
+
+- 使用 `Promise` 获取JSONP示例
+   ```javascript
+   function jsonp(url) {
+      return new Promise((resolve, reject) => {
+         const callbackName = 'callback' + Date.now();
+         window[callbackName] = function(data) {
+            delete window[callbackName]; // 数据接受完成后，删除该全局变量，避免变量污染
+            document.body.removeChild(script);
+            resolve(data);
+         };
+         const script = document.createElement('script');
+         script.src = url + '&callback=' + callbackName;
+         document.body.appendChild(script);
+      });
+   }
+
+   jsonp('http://example.com/data?param1=value1&param2=value2')
+      .then(data => {
+         console.log(data);
+      })
+      .catch(error => {
+          console.error(error);
+      });
+   ```
+
+##### CORS - 服务器设置 http header
+- 完全由服务端操作
+   ```javascript
+      //第二个参数填写允许跨域的域名称，不建议直接写"*"
+      response.setHeader("Access-Control-Allow-Origin","http://localhost:8011");
+      response.setHeader("Access-Control-Allow-Headers","X-Requested-With");
+      response.setHeader("Access-Control-Allow-Methods","PUT,POST,GET,DELETE,OPTIONS");
+      //接收跨域的cookie
+      response.setHeader("Access-Control-Allow-Credentials","true")
+   ```
+
+##### ajax 常用插件
+
+- 古老技术 `jQuery.ajax`
+- `fetch`
+- `axios`
+
 ### Storage
+
+- `cookie` `localStorage` `sessionStorage` 区别
+   1. cookie 
+      - 用于浏览器和 `server` 通讯
+      - 被 ‘借用’ 到本地储存
+      - `document.cookie` 修改
+      - 通过 `;` 来分割的字符串形式
+      - 限制
+         - 最大4kb
+         - http 请求携带，增加请求数据量
+         - 只能使用 `document.cookie` 来修改，太过简陋
+   2. `localStorage` 
+      - `HTML5` 专门为存储设计，最大 `5M`
+      - `API` 简单易用 `setItem` `getItem`
+      - 不会被 `http` 请求发送出去
+   3. `localStorage` 和 `sessionStorage` 的区别
+      - localStorage数据会永久存储，除非代码或手动删除
+      - sessionStorage数据只存在于当前会话，浏览器关闭则清空
+      - 一般用localStorage会更多一些
+
+---
+
+## debounce && throttle
+
+### debounce
+
+- 监听一个输入框的，文字变化后触发 `change` 事件
+- 直接用 `keyup` 事件，则会频发触发 `change` 事件
+- 防抖：用户输入结束或暂停时，才会触发 `change` 事件
+
+```javascript
+   function debounce(func, delay) {
+   let timer = null;
+   return function() {
+      const context = this;
+      const args = arguments;
+      timer && clearTimeout(timer);
+      timer = setTimeout(function() {
+         func.apply(context, args);
+         timer = null;
+      }, delay);
+   };
+   }
+```
+
+### throttle
+
+- 拖拽一个元素时，要随时拿到该元素被拖拽的位置
+- 直接用 `drag` 事件，则会频发触发，很容易导致卡顿
+- 节流：无论拖拽速度多快，都会每隔 `100ms` 触发一次
+
+```javascript
+   function throttle(fn, delay = 100) {
+   let timer = null
+   return function(){
+      const _ctx = this
+      const args = arguments
+      if(timer){
+         return
+      }
+      timer = setTimeout(()=>{
+         fn.apply(_ctx, args)
+         timer = null
+      }, delay)
+   }
+   }
+```
