--- a/content/1.posts/6.Front-Web-Interview.md
+++ b/content/1.posts/6.Front-Web-Interview.md
@@ -28,3 +28,5 @@ tag: ['Nodejs', 'HTML', 'CSS', 'JS', '数据库']
 
 1. [HTML & CSS 总结](/posts/front-web-interview-html-css)
 2. [Javascript 总结](/posts/front-web-interview-js)
+3. [Vue 总结](/posts/front-web-interview-vue)
+4. [React 总结](/posts/front-web-interview-react)
